Added layout_margin for reset button and added comment for reset method.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,7 +113,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Reset"
-            android:onClick="reset"/>
+            android:onClick="reset"
+            android:layout_margin="8dp" />
 
     </LinearLayout>
 </LinearLayout>
